Uma bela de uma alterada na interface, nao usa mais navigator, nao usa mais fragments, tudo na mainactivity, scene controla a parada, tá bem mais portável agora!

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,10 @@
             android:theme="@style/Theme.RaciocinioBruto.NoActionBar">
 
         </activity>
+        <activity
+            android:name=".InfoActivity">
+
+        </activity>
 
     </application>
 
